<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Boutique_Page"
    android:background="@color/green_leaf_light">

    <ImageView
        android:id="@+id/img_deco_fond"
        android:layout_width="356dp"
        android:layout_height="818dp"
        android:layout_marginTop="52dp"
        android:background="@color/green_leaf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_deco_fond_2"
        android:layout_width="356dp"
        android:layout_height="5dp"
        android:background="@color/marron_terra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <ImageView
        android:id="@+id/img_deco_fond_"
        android:layout_width="357dp"
        android:layout_height="5dp"
        android:background="@color/marron_terra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <ImageView
        android:id="@+id/img_empl_ticket_x"
        android:layout_width="@dimen/grand_cercle"
        android:layout_height="@dimen/grand_cercle"
        android:src="@android:drawable/presence_invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/txt_ticketprice_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ticketP_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_empl_ticket_x1"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/txt_ticketprice_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="384dp"
        android:text="@string/txt_ticketP_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_empl_ticket_x"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_ticketprice_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ticketP_3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_empl_ticket_x10"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_empl_ticket_x10"
        android:layout_width="@dimen/grand_cercle"
        android:layout_height="@dimen/grand_cercle"
        android:src="@android:drawable/presence_invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <ImageView
        android:id="@+id/img_empl_ticket_x1"
        android:layout_width="@dimen/grand_cercle"
        android:layout_height="@dimen/grand_cercle"
        android:src="@android:drawable/presence_invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/txt_sTitle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sTitle_1"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/txt_sTitle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sTitle_2"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/btn_rtr_2"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:text="@string/txt_x"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/btn_pg_achat_temp"
        android:layout_width="221dp"
        android:layout_height="105dp"
        android:text="Bouton temporaire achat Chat"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <ImageView
        android:id="@+id/img_deco"
        android:layout_width="209dp"
        android:layout_height="77dp"
        android:background="@color/marron_terra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/txt_deco"
        android:layout_width="198dp"
        android:layout_height="68dp"
        android:text="@string/txt_btqu"
        android:textAlignment="center"
        android:textColor="@color/white_false"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>