<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondfragment"
    android:background="@color/green_leaf_light">


    <ImageView
        android:id="@+id/img_barre_H"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/green_leaf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btn_rfg"
        android:layout_width="@dimen/carre"
        android:layout_height="@dimen/carre"
        android:text="@string/txt_rfg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <Button
        android:id="@+id/btn_btqu"
        android:layout_width="@dimen/carre"
        android:layout_height="@dimen/carre"
        android:text="@string/txt_btqu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <ImageView
        android:id="@+id/img_Barre_B"
        android:layout_width="417dp"
        android:layout_height="122dp"
        android:background="@color/green_leaf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/icn_sleeping_cat"
        android:layout_width="190dp"
        android:layout_height="165dp"
        android:src="@drawable/ic_ct_blck_sleep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />

    <ImageView
        android:id="@+id/img_empl_bonus_1"
        android:layout_width="@dimen/p_carre"
        android:layout_height="@dimen/p_carre"
        android:src="@android:drawable/presence_invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <ImageView
        android:id="@+id/img_empl_bonus_2"
        android:layout_width="@dimen/p_carre"
        android:layout_height="@dimen/p_carre"
        android:src="@android:drawable/presence_invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <ImageView
        android:id="@+id/img_empl_bonus_3"
        android:layout_width="@dimen/p_carre"
        android:layout_height="@dimen/p_carre"
        android:src="@android:drawable/presence_invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <ImageView
        android:id="@+id/img_deco"
        android:layout_width="204dp"
        android:layout_height="83dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/img_Barre_B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_barre_H"
        app:layout_constraintVertical_bias="0.541" />

    <TextView
        android:id="@+id/txt_deco"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:text="@string/txt_deco"
        android:textAlignment="center"
        android:textColor="@color/grey_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_Barre_B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_barre_H"
        app:layout_constraintVertical_bias="0.538" />

</androidx.constraintlayout.widget.ConstraintLayout>